--- a/CGVModClient/AppShell.xaml
+++ b/CGVModClient/AppShell.xaml
@@ -3,13 +3,14 @@
     x:Class="CGVModClient.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:pages="clr-namespace:CGVModClient.Pages"
     xmlns:local="clr-namespace:CGVModClient"
     Shell.FlyoutBehavior="Disabled"
     Title="CGVModClient">
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
+        ContentTemplate="{DataTemplate pages:GiveawayEventListPage}"
         Route="MainPage" />
 
 </Shell>
