--- a/CGVModClient/Pages/GiveawayEventListPage.xaml
+++ b/CGVModClient/Pages/GiveawayEventListPage.xaml
@@ -1,52 +1,71 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:cgv="clr-namespace:CGVModClient"
+             xmlns:cgv_viewmodels="clr-namespace:CGVModClient.ViewModels"
+             xmlns:cgv_data="clr-namespace:CGVModClient.Data"
              x:Class="CGVModClient.Pages.GiveawayEventListPage"
+             x:DataType="cgv_viewmodels:GiveawayEventListViewModel"
+             Loaded="ContentPage_Loaded"
              Title="경품 이벤트 현황">
     <ContentPage.Resources>
         <Style x:Key="MyBorder" TargetType="Border">
             <Setter Property="Stroke" Value="LightGray"></Setter>
         </Style>
         <Style x:Key="GiveawayEventNameLabel" TargetType="Label">
-            <Setter Property="FontSize" Value="20"/>
-            <Setter Property="FontAttributes" Value="Bold"/>
+            <Setter Property="FontSize" Value="14"/>
         </Style>
         <Style x:Key="GiveawayEventPeriodLabel" TargetType="Label">
-            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="FontSize" Value="12"/>
             <Setter Property="TextColor" Value="LightGrey"/>
         </Style>
     </ContentPage.Resources>
-    <VerticalStackLayout>
-        <Border Style="{StaticResource MyBorder}"
-                HeightRequest="40"
-                Padding="3">
-            <Label Text="진행중인 경품 이벤트{ }개"
+    <Grid RowDefinitions="40,*">
+        <Border Grid.Row="0"
+                Style="{StaticResource MyBorder}"
+                StrokeThickness="0.5"
+                Padding="7"
+                Margin="-2,0,-2,0">
+            <Label Text="{Binding EventState}"
                VerticalOptions="Center" 
                HorizontalOptions="Start"
                Margin="0,0,20,0"/>
         </Border>
-        <BindableLayout.ItemTemplate>
-            <DataTemplate>
-                <Grid ColumnDefinitions="*,100"
-                    HeightRequest="60">
-                    <VerticalStackLayout>
-                        <Label Text="{Binding GiveawayEventName}"
-                               Style="{StaticResource GiveawayEventNameLabel}"/>
-                        <Label Text="{Binding Period}"
-                               Style="{StaticResource GiveawayEventPeriodLabel}"/>
-                    </VerticalStackLayout>
-                </Grid>
-            </DataTemplate>
-        </BindableLayout.ItemTemplate>
-        <BindableLayout.EmptyView>
-            <StackLayout>
-                <Label Text="None."
-                   FontAttributes="Italic"
-                   FontSize="{StaticResource smallTextSize}" />
-                <Label Text="Try harder and return later?"
-                   FontAttributes="Italic"
-                   FontSize="{StaticResource smallTextSize}" />
-            </StackLayout>
-        </BindableLayout.EmptyView>
-    </VerticalStackLayout>
+        <ListView Grid.Row="1"
+                  ItemsSource="{Binding GiveawayEventList}"
+                  ItemTapped="ListView_ItemTapped">
+            <ListView.ItemTemplate>
+                <DataTemplate x:DataType="cgv_data:GiveawayEvent">
+                    <ViewCell>
+                        <Grid ColumnDefinitions="1*,100"
+                              HeightRequest="60"
+                              HorizontalOptions="Fill"
+                              VerticalOptions="Center">
+                            <VerticalStackLayout Grid.Column="0" 
+                                                 VerticalOptions="Center"
+                                                 HorizontalOptions="StartAndExpand"
+                                                 Margin="5">
+                                <Label Text="{Binding Title}"
+                                       Style="{StaticResource GiveawayEventNameLabel}"/>
+                                <Label Text="{Binding Period}"
+                                       Style="{StaticResource GiveawayEventPeriodLabel}"/>
+                            </VerticalStackLayout>
+                            <Border Grid.Column="1"
+                                    HeightRequest="30"
+                                    WidthRequest="100"
+                                    Stroke="Red">
+                                <Border.StrokeShape>
+                                    <RoundRectangle CornerRadius="10"/>
+                                </Border.StrokeShape>
+                                <Label Text="{Binding DDay}"
+                                       HorizontalTextAlignment="Center"
+                                       VerticalTextAlignment="Center"
+                                       HeightRequest="30"/>
+                            </Border>
+                        </Grid>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+    </Grid>
 </ContentPage>
