--- a/CGVModClient/Pages/GiveawayEventListPage.xaml
+++ b/CGVModClient/Pages/GiveawayEventListPage.xaml
@@ -33,7 +33,8 @@
         </Border>
         <ListView Grid.Row="1"
                   ItemsSource="{Binding GiveawayEventList}"
-                  ItemTapped="ListView_ItemTapped">
+                  ItemTapped="ListView_ItemTapped"
+                  SelectionMode="None">
             <ListView.ItemTemplate>
                 <DataTemplate x:DataType="cgv_data:GiveawayEvent">
                     <ViewCell>
