--- a/CGVModClient/Pages/GiveawayEventDetailPage.xaml
+++ b/CGVModClient/Pages/GiveawayEventDetailPage.xaml
@@ -9,7 +9,10 @@
              Loaded="ContentPage_Loaded">
     <ContentPage.Resources>
         <Style x:Key="MyBorder" TargetType="Border">
-            <Setter Property="Stroke" Value="LightGray"></Setter>
+            <Setter Property="Stroke" Value="LightGray"/>
+            <Setter Property="Margin" Value="-2,0,-2,0"/>
+            <Setter Property="Padding" Value="7"/>
+            <Setter Property="StrokeThickness" Value="0.5"/>
         </Style>
         <Style x:Key="GiveawayEventNameLabel" TargetType="Label">
             <Setter Property="FontSize" Value="14"/>
@@ -20,15 +23,12 @@
         </Style>
     </ContentPage.Resources>
     <Grid RowDefinitions="40,*">
-        <Border Grid.Row="0"
-                Style="{StaticResource MyBorder}"
-                StrokeThickness="0.5"
-                Padding="7"
-                Margin="-2,0,-2,0">
+        <Border Grid.Row="0" 
+                Style="{StaticResource MyBorder}">
             <Label Text="{Binding Title}"
-               VerticalOptions="Center" 
-               HorizontalOptions="Start"
-               Margin="0,0,20,0"/>
+                   VerticalOptions="Center" 
+                   HorizontalOptions="Start"
+                   Margin="0,0,20,0"/>
         </Border>
         <ListView Grid.Row="1"
                   ItemsSource="{Binding TheaterInfo.TheaterList}"
