--- a/CGVModClient/Pages/GiveawayEventListPage.xaml
+++ b/CGVModClient/Pages/GiveawayEventListPage.xaml
@@ -10,7 +10,10 @@
              Title="경품 이벤트 현황">
     <ContentPage.Resources>
         <Style x:Key="MyBorder" TargetType="Border">
-            <Setter Property="Stroke" Value="LightGray"></Setter>
+            <Setter Property="Stroke" Value="LightGray"/>
+            <Setter Property="Margin" Value="-2,0,-2,0"/>
+            <Setter Property="Padding" Value="7"/>
+            <Setter Property="StrokeThickness" Value="0.5"/>
         </Style>
         <Style x:Key="GiveawayEventNameLabel" TargetType="Label">
             <Setter Property="FontSize" Value="14"/>
@@ -22,10 +25,7 @@
     </ContentPage.Resources>
     <Grid RowDefinitions="40,*">
         <Border Grid.Row="0"
-                Style="{StaticResource MyBorder}"
-                StrokeThickness="0.5"
-                Padding="7"
-                Margin="-2,0,-2,0">
+                Style="{StaticResource MyBorder}">
             <Label Text="{Binding EventState}"
                VerticalOptions="Center" 
                HorizontalOptions="Start"
