--- a/CGVModClient/AppShell.xaml
+++ b/CGVModClient/AppShell.xaml
@@ -10,7 +10,7 @@
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate pages:GiveawayEventListPage}"
+        ContentTemplate="{DataTemplate pages:MainPage}"
         Route="MainPage" />
 
 </Shell>
