Area, Theater을 내부 클래스에서 클래스로 분리

--- a/CGVModClient/Pages/GiveawayEventDetailPage.xaml
+++ b/CGVModClient/Pages/GiveawayEventDetailPage.xaml
@@ -33,7 +33,7 @@
                   ItemsSource="{Binding TheaterInfo.TheaterList}"
                   SelectionMode="None">
             <ListView.ItemTemplate>
-                <DataTemplate x:DataType="cgv_data:GiveawayTheaterInfo+Theater">
+                <DataTemplate x:DataType="cgv_data:Theater">
                     <ViewCell>
                         <Grid RowDefinitions="1*,1*"
                               HeightRequest="60"
