--- a/CGVModClient/Resources/Styles/Styles.xaml
+++ b/CGVModClient/Resources/Styles/Styles.xaml
@@ -2,7 +2,17 @@
 <?xaml-comp compile="true" ?>
 <ResourceDictionary 
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit">
+
+    <LinearGradientBrush x:Key="DefaultBackgroundBrush" StartPoint="0,0" EndPoint="1,1">
+        <GradientStop Color="#fb4357" Offset="0.1"></GradientStop>
+        <GradientStop Color="#ef642f" Offset="1"></GradientStop>
+    </LinearGradientBrush>
+    
+    <Style x:Key="PopupLayout" TargetType="Layout" ApplyToDerivedTypes="true">
+        <Setter Property="Padding" Value="{OnPlatform Android=20, WinUI=20, iOS=5, MacCatalyst=5, Tizen=20}" />
+    </Style>
 
     <Style TargetType="ActivityIndicator">
         <Setter Property="Color" Value="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource White}}" />
@@ -24,6 +34,7 @@
     </Style>
 
     <Style TargetType="Button">
+        <Setter Property="Background" Value="{StaticResource DefaultBackgroundBrush}"/>
         <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource PrimaryDarkText}}" />
         <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource PrimaryDark}}" />
         <Setter Property="FontFamily" Value="OpenSansRegular"/>
