--- a/CGVModClient/Pages/BookingOpenNotificationAddPage.xaml
+++ b/CGVModClient/Pages/BookingOpenNotificationAddPage.xaml
@@ -2,20 +2,22 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+             xmlns:cgv_viewmodel="clr-namespace:CGVModClient.ViewModels"
              x:Class="CGVModClient.Pages.BookingOpenNotificationAddPage"
+             x:DataType="cgv_viewmodel:BookingOpenNotificationAddViewModel"
               Title="예매 오픈 알림 추가">
 
     <Grid RowDefinitions="1*,100">
         <VerticalStackLayout Grid.Row="0" x:Name="popupContent" Spacing="12" VerticalOptions="Center" WidthRequest="250">
             <Button x:Name="TitleButton"
                     ImageSource="https://img.cgv.co.kr/WebApp/images/reservation/schedule/bg_quickReservationResult_movie_add.png"
-                    Text="{Binding Title, TargetNullValue='영화를 선택해 주세요.', FallbackValue='영화를 선택해 주세요.'}"
+                    Text="{Binding Title, TargetNullValue='영화를 선택해 주세요.'}"
                     Clicked="TitleButton_Clicked"
                     Background="Transparent"
                     TextColor="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"/>
             <Button x:Name="MovieFormatButton"
                     ImageSource="https://img.cgv.co.kr/WebApp/images/reservation/schedule/btn_filter_check.png"
-                    Text="{Binding MovieFormat, FallbackValue='2D'}"
+                    Text="{Binding MovieFormat, TargetNullValue='2D'}"
                     Clicked="MovieFormatButton_Clicked"
                     Background="White"
                     TextColor="Black"
@@ -23,14 +25,14 @@
                     BorderWidth="{AppThemeBinding Light= 1, Dark= 0}"/>
             <Button x:Name="TheaterButton"
                     ImageSource="https://img.cgv.co.kr/WebApp/images/reservation/schedule/bg_quickReservationResult_theater_add.png"
-                    Text="{Binding TheaterName, FallbackValue='CGV 용산아이파크몰'}"
+                    Text="{Binding Theater.TheaterName, FallbackValue='극장을 선택해 주세요.'}"
                     Clicked="TheaterButton_Clicked"
                     Background="White"
                     TextColor="Black"
                     BorderColor="{StaticResource Gray100}"
                     BorderWidth="{AppThemeBinding Light= 1, Dark= 0}"/>
             <Button x:Name="DateButton"
-                    Text="{Binding TargetDate, FallbackValue='2023-01-17, 수요일'}"
+                    Text="{Binding TargetDate, StringFormat=\{0:yyyy-MM-dd dddd\}}"
                     Clicked="DateButton_Clicked"
                     Background="White"
                     TextColor="Black"
