maui/issues/20046 오류 수정. (CollectionView로 재구현)

--- a/CGVModClient/Pages/OpenNotificationSettingPage.xaml
+++ b/CGVModClient/Pages/OpenNotificationSettingPage.xaml
@@ -26,29 +26,30 @@
                         IsToggled="{Binding IsOpenNotificationEnabled, Mode=TwoWay}"/>
             </Grid>
         </Border>
-        <ListView Grid.Row="1"
-                  ItemsSource="{Binding Infos}"
-                  SelectionMode="None"
-                  HasUnevenRows="True"
-                  ItemTapped="ListView_ItemTapped">
-            <ListView.ItemTemplate>
+        <CollectionView Grid.Row="1"
+                        ItemsSource="{Binding Infos}"
+                        SelectionMode="None"
+                        x:Name="ItemsCollectionView">
+            <CollectionView.ItemTemplate>
                 <DataTemplate x:DataType="cgv_data:OpenNotificationInfo">
-                    <ViewCell>
-                        <Grid ColumnDefinitions="50,1*"
+                    <Grid ColumnDefinitions="50,1*"
                               HeightRequest="80"
                               Margin="4">
-                            <Image Grid.Column="0" Source="{Binding Movie.ThumbnailSource}" Margin="5"/>
-                            <Grid Grid.Column="1" RowDefinitions="1*,1*,1*,1*">
-                                <Label Grid.Row="0" Text="{Binding Movie.Title}"/>
-                                <Label Grid.Row="1" Text="{Binding ScreenType}"/>
-                                <Label Grid.Row="2" Text="{Binding Theater.TheaterName}"/>
-                                <Label Grid.Row="3" Text="{Binding TargetDate, StringFormat='{0:yyyy-MM-dd}'}"/>
-                            </Grid>
+                        <Grid.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding Source={x:Reference ItemsCollectionView}, Path=BindingContext.RemoveOpenNotificationInfoCommand}"
+                                                  CommandParameter="{Binding .}"/>
+                        </Grid.GestureRecognizers>
+                        <Image Grid.Column="0" Source="{Binding Movie.ThumbnailSource}" Margin="5"/>
+                        <Grid Grid.Column="1" RowDefinitions="1*,1*,1*,1*">
+                            <Label Grid.Row="0" Text="{Binding Movie.Title}"/>
+                            <Label Grid.Row="1" Text="{Binding ScreenType}"/>
+                            <Label Grid.Row="2" Text="{Binding Theater.TheaterName}"/>
+                            <Label Grid.Row="3" Text="{Binding TargetDate, StringFormat='{0:yyyy-MM-dd}'}"/>
                         </Grid>
-                    </ViewCell>
+                    </Grid>
                 </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
         <Button Grid.Row="2"
                 x:Name="AddNotificationButton"
                 Text="새 알림 추가"
